# IntelliC

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  agent_policy.toml  findings.md  pixi.toml  progress.md  pyproject.toml  task_plan.md
.agent/: README.md
.agent/commands/: init.md
.agent/rules/: core-development.md  docs-and-artifacts.md  testing-and-verification.md
.agents/: README.md
.agents/agents/: compiler-architect.md  docs-curator.md  programming-surface-reviewer.md  repo-reviewer.md  verifier.md
.agents/rules/: agent-harness.md  code-quality.md  development-flow.md  docs-and-knowledge.md  evidence-and-verification.md  security-and-environment.md
.agents/templates/: design.md  feature-task.md  review-report.md
.github/: pull_request_template.md
.github/scripts/: check_pr_policy.py
docs/: README.md  story.md
examples/: README.md  __init__.py  action_cleanup_pipeline.py  affine_stencil_tile.py  affine_tile.py  common.py  scf_piecewise_accumulate.py  sum_to_n.py
htp/: __init__.py  __main__.py  agent_policy.py  compiler.py  compiler_errors.py  diagnostics.py  intrinsics.py  kernel.py  perf.py  routine.py  schemas.py  solver.py  tools.py  types.py
htp_ext/: __init__.py  registry.py
intellic/: __init__.py
scripts/: check_repo_harness.py
tests/: conftest.py  programs.py  test_actions.py  test_dialects.py  test_docs_layout.py  test_environment_contract.py  test_examples.py  test_imports.py  test_parser_printer.py  test_pr_policy_script.py  test_public_surfaces.py  test_repo_harness.py  test_semantics.py  test_surface_builders.py  test_syntax_core.py
(+631 files in other folders)
