[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htp"
version = "0.1.0"
description = "HTP compiler substrate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
]

[project.scripts]
htp = "htp.__main__:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.setuptools]
packages = ["htp", "htp_ext", "htp_ext.aie", "htp_ext.mlir_cse"]

[tool.setuptools.package-dir]
htp = "htp"
htp_ext = "htp_ext"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
